0.1.2 ()
=====
* Fixed Makefile for BSD: call $(MAKE) for generating documentation.
* Now using xmlm instead of xml-light.

0.1.1 (16-04-2008)
=====
* Install .cmx file

0.1.0 (01-11-2007)
=====
* Initial release